# cdcl

./: .gitattributes  .gitignore  Cargo.toml  README.md  report.ipynb  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: codspeed.yml  gh-pages.yml  rust.yml
benches/: solve.rs
report/20240608/: report.ipynb  report_v30c10000_brute_force_21440.json  report_v40c10000_brute_force_14136.json  report_v50c10000_brute_force_4944.json
report/dpll/: report.ipynb  report_v30c10000_brute_force_18356.json  report_v30c10000_dpll_6948.json  report_v40c10000_brute_force_14452.json  report_v40c10000_dpll_6376.json  report_v50c10000_brute_force_7364.json  report_v50c10000_dpll_8540.json
report/random_2002/: report.ipynb  report_random_2002_cdcl_15100.json  report_random_2002_dpll_27256.json
src/: backtrack.rs  benchmark.rs  brute_force.rs  cdcl.rs  dpll.rs  expr.rs  lib.rs  main.rs  resolution_trace.rs  selector.rs  testing.rs  timeout.rs
src/backtrack/: double_linked_list.rs  id_mapping.rs  status.rs
src/expr/: clause.rs  cnf.rs  dnf.rs  literal.rs
src/snapshots/: cdcl__cdcl__tests__cdcl_solve_sat.snap  cdcl__cdcl__tests__cdcl_solve_sat.snap.new  cdcl__cdcl__tests__cdcl_solve_unsat-10.snap  cdcl__cdcl__tests__cdcl_solve_unsat-2.snap  cdcl__cdcl__tests__cdcl_solve_unsat-3.snap  cdcl__cdcl__tests__cdcl_solve_unsat-4.snap  cdcl__cdcl__tests__cdcl_solve_unsat-5.snap  cdcl__cdcl__tests__cdcl_solve_unsat-6.snap  cdcl__cdcl__tests__cdcl_solve_unsat-7.snap  cdcl__cdcl__tests__cdcl_solve_unsat-8.snap  cdcl__cdcl__tests__cdcl_solve_unsat-9.snap  cdcl__cdcl__tests__cdcl_solve_unsat.snap
