[package]
name = "cdcl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
maplit = "1.0.2"
rgbd = "0.2.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
