[package]
name = "cdcl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
maplit = "1.0.2"
proptest = "1.5.0"
rgbd = "0.2.1"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "solve"
harness = false

# Disable bench for crate itself and executable

[lib]
bench = false

[[bin]]
name = "cdcl"
bench = false
